[package]
name = "benches"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ort = { git = "https://github.com/bloopai/ort", branch = "env-builder-telemetry", features = ["load-dynamic"] }
tokenizers = {version="=0.13.3", default-features=false, features=["onig"]}
ndarray = "0.15"
anyhow = "1.0.72"
# llm = { git = "https://github.com/nerdypepper/llm", branch = "add-bert-arch", features = ["bert", "cublas"] }
# llm = { path = "/Users/gabriel/work/research/llm/crates/llm", features = ["bert", "cublas"] }
# llm = { path = "/home/np/bloop/ggml/llm/crates/llm", features = ["bert", "cublas"] }
# llm = { path = "/Users/administrator/code/llm/crates/llm", features = ["bert", "metal"] }
llm = { git = "https://github.com/bloopai/llm", branch = "batch-metal-kernels", default-features = false, features = ["bert"], optional = true }
hf-hub = "0.2.0"
candle-core = "0.1.2"
candle-nn = "0.1.2"
tracing = "0.1.37"
serde = "1.0.186"
serde_json = "1.0.105"
libc = { version = "0.2.147" }
accelerate-src = { version = "0.3.2" }

[dev-dependencies]
criterion = "0.3"

[[bench]]
name = "benchmarko"
harness = false

[[bin]]
name = "sim"
path = "src/sim.rs"

[[bin]]
name = "print"
path = "src/print_embed.rs"
